@@ -148,6 +148,8 @@
 
 #define SLAVE_MODE (PING & (1<<INP_G_RF_POW))
 
+extern uint8_t SlaveMode ;
+
 extern const prog_uint8_t APM modn12x3[] ;
 extern const prog_char APM Str_OFF[] ;
 extern const prog_char APM Str_ON[] ;
@@ -349,9 +351,10 @@ const prog_char APM s_charTab[]=" ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrst
 #define PROTO_PPM        0
 #define PROTO_PXX        1
 #define PROTO_DSM2       2
-#define PROTO_PPM16	 3
-#define PROT_MAX         3
-#define PROT_STR "PPM   PXX   DSM2  PPM16 "
+#define PROTO_PPM16	     3
+#define PROTO_PPMSIM     4		// Always make this the last protocol
+#define PROT_MAX         4
+#define PROT_STR "PPM   PXX   DSM2  PPM16 PPMSIM"
 #define PROT_STR_LEN     6
 #define DSM2_STR "LP4/LP5  DSM2only DSM2/DSMX"
 #define DSM2_STR_LEN     9
